recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: Missing closing brace `}' assumed here
if (level==0) {
^